<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/apk/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Connexion">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="26sp" />

            <ImageView
                style="@style/Toolbar"
                android:id="@+id/logo_soigne_moi"
                android:layout_margin="4dp"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:importantForAccessibility="no"
                android:layout_gravity="start"
                android:scaleType="centerCrop"
                android:src="@drawable/soigne_moi"
                android:contentDescription="@string/title_description" />

            <ImageButton
                android:id="@+id/dropdown_menu"
                style="@style/Toolbar"
                android:layout_width="28dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/menu" />
        </FrameLayout>

        <LinearLayout
            style="@style/Body"
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorBackgroundButton">

            <TextView
                android:id="@+id/sub_menu_item4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="15px"
                android:gravity="center"
                android:text="@string/cadre_app"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp" />

    </LinearLayout>

    </LinearLayout>